--- a/public/less/site.less
+++ b/public/less/site.less
@@ -1,4 +1,13 @@
 /*===============
+GLOBAL
+===============*/
+body {
+	//background:url(../img/body-bg.jpg) top center;
+	//background-size:cover;
+}
+
+
+/*===============
 HEADER
 ===============*/
 
