--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -6549,6 +6549,9 @@ button.close {
   }
 }
 /*===============
+GLOBAL
+===============*/
+/*===============
 HEADER
 ===============*/
 nav.navbar.navbar-inverse {
