--- a/public/less/site.less
+++ b/public/less/site.less
@@ -2,8 +2,9 @@
 GLOBAL
 ===============*/
 body {
-	//background:url(../img/body-bg.jpg) top center;
-	//background-size:cover;
+	background:url(../img/body-bg.jpg) top center;
+	background-size:cover;
+	background-attachment: fixed;
 }
 
 
@@ -50,6 +51,26 @@ nav.navbar {
 	width: 100%;
 	ul {
 		text-transform: uppercase;
+	}
+	&.navbar-default {
+		.active {
+			a {
+				background: none;
+				color: @brand-primary;
+			}
+			&:hover {
+				a {
+					background: none;
+					color: darken(@brand-primary, 10%);
+				}
+			}
+		}
+		li:hover {
+			a {
+				background: none;
+				color: @brand-primary;
+			}
+		}
 	}
 }
 
@@ -118,7 +139,7 @@ img.logo {
 	}
 	//logo
 	img.logo {
-		margin:-30px auto 0;
+		margin:-30px 0 0 0;
 	}
 }
 
