added the about page

--- a/public/less/site.less
+++ b/public/less/site.less
@@ -6,6 +6,41 @@ body {
 	background-size:cover;
 	background-attachment: fixed;
 }
+.quote {
+	margin: 50px 0 0 0;
+	background:rgba(255, 255, 255, .4);
+	padding: 10px 15px 20px 15px;
+	position: relative;
+	border:1px solid rgba(92, 193, 174, .4);
+	&:before {
+		content:' ';
+		color: darken(@brand-primary, 10%);
+		background: url(../img/quote-open.png);
+		width: 57px;
+		height: 43px;
+		display:block;
+		position: absolute;
+		top:-21px;
+		left: -32px;
+	}
+	&:after {
+		content:' ';
+		color: darken(@brand-primary, 10%);
+		background: url(../img/quote-close.png);
+		width: 57px;
+		height: 43px;
+		display: block;
+		position: absolute;
+		bottom:-21px;
+		right:-32px;
+	}
+	h3 {
+		color: darken(@brand-primary, 10%);
+		line-height: 1.5;
+		padding: 0;
+		font-size: 2em;
+	}
+}
 
 
 /*===============
@@ -25,7 +60,7 @@ nav.navbar.navbar-inverse {
 	background: -o-linear-gradient(top,  rgba(255,255,255,1) 18%,rgba(255,255,255,0) 100%); /* Opera 11.10+ */
 	background: -ms-linear-gradient(top,  rgba(255,255,255,1) 18%,rgba(255,255,255,0) 100%); /* IE10+ */
 	background: linear-gradient(to bottom,  rgba(255,255,255,1) 18%,rgba(255,255,255,0) 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#00000000',GradientType=0 ); /* IE6-8 */	
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00fffff',GradientType=0 ); /* IE6-8 */	
 }
 
 //Main Navigation : Pages 
@@ -44,6 +79,12 @@ nav.navbar.navbar-default {
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 ); /* IE6-8 */	
 }
 
+@media(max-width: @screen-xs-max) {
+	nav.navbar.navbar-default {
+		background:#fff;
+	}
+}
+
 
 //Convert Text to uppercase in navigation
 nav.navbar {
@@ -51,6 +92,9 @@ nav.navbar {
 	width: 100%;
 	ul {
 		text-transform: uppercase;
+		a {
+			font-family: "Montserrat";
+		}
 	}
 	&.navbar-default {
 		.active {
@@ -147,3 +191,103 @@ img.logo {
 /*===============
 PAGES
 ===============*/
+// HOMEPAGE
+.home-video {
+	padding-top: 175px;
+}
+
+// SUBPAGES
+.page-banner {
+	padding-top: 175px;
+	.jumbotron {
+		height: 500px;
+		background-size:cover;
+		position: relative;
+		overflow: hidden;
+	}
+	h1.page-header {
+		padding: 0 0 10px 0;
+		border: none;
+		margin: 0;
+		font-size: 1.25em;
+		text-transform: uppercase;
+		color: darken(@brand-primary, 10%);
+		font-family: "Montserrat";
+	}
+	h2 {
+		position: absolute;
+		color: #fff;
+		bottom:-10px;
+		left: 0;
+		padding: 20px;
+		text-align: center;
+		width: 100%;
+		/* IE9 SVG, needs conditional override of 'filter' to 'none' */
+		background: -moz-linear-gradient(top,  rgba(0, 0, 0, 0) 18%, rgba(0, 0, 0,.7) 100%); /* FF3.6+ */
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(18%,rgba(0, 0, 0, .7)), color-stop(100%,rgba(0, 0, 0, 0))); /* Chrome,Safari4+ */
+		background: -webkit-linear-gradient(top,  rgba(0, 0, 0, 0) 18%,rgba(0, 0, 0, .7) 100%); /* Chrome10+,Safari5.1+ */
+		background: -o-linear-gradient(top,  rgba(0, 0, 0, 0) 18%,rgba(0, 0, 0, .7) 100%); /* Opera 11.10+ */
+		background: -ms-linear-gradient(top,  rgba(0, 0, 0, 0) 18%,rgba(0, 0, 0, .7) 100%); /* IE10+ */
+		background: linear-gradient(to bottom,  rgba(0, 0, 0, 0) 18%,rgba(0, 0, 0, .7) 100%); /* W3C */
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#00000000',GradientType=0 ); /* IE6-8 */
+	}
+}
+
+@media(max-width:@screen-sm-max) {
+	.page-banner {
+		.jumbotron {
+			height: 300px;
+		}
+	}	
+}
+
+/*===============
+PANEL
+===============*/
+.panel{
+	&.panel-mission {
+		background:transparent;
+		.panel-heading {
+			background:transparent;
+			font-size: 1.25em;
+			text-transform: uppercase;
+			font-family: "Montserrat";
+			color: #fff;
+			background: rgba(92, 193, 174, .7);
+			text-shadow: 0px 2px 0px @brand-primary;
+		}
+		.panel-body {
+			background: @brand-primary;
+			color: #fff;
+			span.pro {
+				color: lighten(@brand-primary, 30%);
+				background: darken(@brand-primary, 10%);
+				padding: 0px 5px;
+			}
+			span.con {
+				color: lighten(#FEBE6E, 20%);
+			}
+			li {
+				font-size: 1.15em;
+				line-height: 2;
+				border-bottom:1px solid lighten(@brand-primary, 10%);
+				&:last-child {
+					border-bottom:none;
+				}
+			}
+			ul {
+				list-style-type: none;
+				padding: 0;
+			}
+		}
+	}
+}
+
+/*===============
+FOOTER
+===============*/
+footer#main {
+	height: 400px;
+	background: darken(@brand-primary, 5%);
+	margin-top:50px;
+}
