--- a/public/less/bootstrap.less
+++ b/public/less/bootstrap.less
@@ -1,5 +1,6 @@
 //Font Embeds
 @import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
+@import url(http://fonts.googleapis.com/css?family=Raleway:400,500,700);
 
 // Core variables and mixins
 @import "variables.less";
