added the about page

--- a/public/less/site.less
+++ b/public/less/site.less
@@ -42,6 +42,13 @@ body {
 	}
 }
 
+@media(max-width:@screen-sm-max) {
+	.quote {
+		h3 {
+			font-size: 1em;
+		}
+	}
+}
 
 /*===============
 HEADER
