--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -6592,6 +6592,11 @@ body {
   padding: 0;
   font-size: 2em;
 }
+@media (max-width: 991px) {
+  .quote h3 {
+    font-size: 1em;
+  }
+}
 /*===============
 HEADER
 ===============*/
